CHANGES IN VERSION 0.99.4
------------------------
 o show and get.tree methods of hyphy <2015-01-02, Fri> 
 o export read.hyphy <2015-01-02, Fri>
 o export hyphy class <2015-01-01, Thu>
 o plot method for beast class and get.tree method for codeml class <2014-12-31, Wed>
 o show, get.fields, get.subs and plot methods for codeml class <2014-12-30, Tue>
 o plot method for paml_rst class <2014-12-30, Tue>
 o get.subs, method for paml_rst class <2014-12-30, Tue>
 o show, plot, get.tree and fority methods for codeml_mlc class <2014-12-29, Mon>
 o codeml class <2014-12-29, Mon>
 o hyphy class and read.hyphy prototype <2014-12-27, Sat>
 o update man file and add example file of beast output <2014-12-26, Fri>
 o get.tree and get.fileds methods of beast class <2014-12-26, Fri>
 o read.beast <2014-12-26, Fri>
 o beast class and show method <2014-12-26, Fri> 
 o coplot prototype<2014-12-24, Wed>
 o parse translation matrix in beast nexus <2014-12-24, Wed>
 o extract beast stats info <2014-12-23, Tue>

CHANGES IN VERSION 0.99.3
------------------------
 o gplot function that can view a tree and an associated matrix simultaneously <2014-12-22, Mon>
 o modified vignette to show based on branch position and break the evolution distance scale <2014-12-22, Mon>
 o label and annotation can be put based on branch. <2014-12-22, Mon>
 o write.jplace and fully supports of jplace by ggtree. <2014-12-21, Sun>
 o support unrooted layout in ggplot. <2014-12-21, Sun>
 o support fan, radial, dendrogram layout in geom_tree. <2014-12-21, Sun>
 
CHANGES IN VERSION 0.99.2
------------------------
 o layout of unrooted tree, implemented equal-angle algorithm that described in Chapter 34
   of 'Inferring Phylogenies' (page 578-580) <2014-12-20, Sat>
 o add layout parameter in ggtree and geom_tree, now supports phylogram and cladogram <2014-12-20, Sat>
 o %<+% function for inserting annotation data to a tree view <2014-12-20, Sat>
 o update ggtree-treeAnnotation vignette <2014-12-20, Sat>
