@@ -1,15 +1,18 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/codeml.R, R/paml_rst.R
+% Please edit documentation in R/AllGenerics.R, R/codeml.R, R/hyphy.R, R/paml_rst.R
 \docType{methods}
 \name{get.subs}
 \alias{get.subs}
 \alias{get.subs,codeml-method}
+\alias{get.subs,hyphy-method}
 \alias{get.subs,paml_rst-method}
 \title{get.subs method}
 \usage{
 get.subs(object, type, ...)
 
 \S4method{get.subs}{codeml}(object, type, ...)
+
+\S4method{get.subs}{hyphy}(object, type, ...)
 
 \S4method{get.subs}{paml_rst}(object, type, ...)
 }
